--- a/views/events/index.erb
+++ b/views/events/index.erb
@@ -1,7 +1,5 @@
 <% @events.each do |event| %>
-Title:<%= event.title %>
-Time: <%= event.start_time %> - <%= event.end_time %>
 
-Location: <%= event.location %>
+Title: <a href="/events/<%= "#{event.id}" %>"><%= event.title %> </a> 
 
 <% end %>
