--- a/views/appointments/show.erb
+++ b/views/appointments/show.erb
@@ -1,4 +1,4 @@
 <h2><%= @appointment.title %></h2>
-<p>When: <%= @appointment.start_time %> - <%= @appointment.end_time %></p>
+<p>When: <%= @appointment.start_date %> <%= @appointment.start_time %> --- <%= @appointment.end_date %> <%= @appointment.end_time %></p>
 <p>Where: <%= @appointment.location %></p>
 <p>Priority: <%= @appointment.priority %></p>
