--- a/views/events/edit.erb
+++ b/views/events/edit.erb
@@ -4,15 +4,15 @@
       <label for="name">Title:</label>
       <input type="text" name="title" id="title" value="<%= @event.title %>"><br>
 
+      <label for="start_date">Start date:</label>
+      <input type="date" name="start_date" id="start_date" value="<%= @event.start_date %>"><br>
       <label for="start_time">Start time:</label>
-      <input type="date" name="starting_date" id="starting_date" value="<%= @event.starting_date %>"><br>
-      <input type="time" name="starting_time" id="starting_time" value="<%= @event.starting_time %>"><br>
+      <input type="time" name="start_time" id="start_time" value="<%= @event.start_time %>"><br>
 
-
-
+      <label for="end_date">End date:</label>
+      <input type="date" name="end_date" id="end_date" value="<%= @event.end_date %>"><br>
       <label for="end_time">End time:</label>
-      <input type="date" name="ending_date" id="ending_date" value="<%= @event.ending_date %>"><br>
-      <input type="time" name="ending_time" id="ending_time" value="<%= @event.ending_time %>"><br>
+      <input type="time" name="end_time" id="end_time" value="<%= @event.end_time %>"><br>
 
       <label for="location">Location:</label>
       <input type="text" name="location" id="location" value="<%= @event.location %>"><br>
