--- a/views/events/new.erb
+++ b/views/events/new.erb
@@ -2,13 +2,15 @@
   <label for="name">Title:</label>
   <input type="text" name="title" id="title"><br>
 
+  <label for="start_date">Start date:</label>
+  <input type="date" name="start_date" id="start_date" value="<%= Date.today %>"><br>
   <label for="start_time">Start time:</label>
-  <input type="date" name="starting_date" id="starting_date"><br>
-  <input type="time" name="starting_time" id="starting_time"><br>
+  <input type="time" name="start_time" id="start_time" value="09:00"><br>
 
+  <label for="end_date">End date:</label>
+  <input type="date" name="end_date" id="end_date" value="<%= Date.today %>"><br>
   <label for="end_time">End time:</label>
-  <input type="date" name="ending_date" id="ending_date"><br>
-  <input type="time" name="ending_time" id="ending_time"><br>
+  <input type="time" name="end_time" id="end_time" value="10:00"><br>
 
   <label for="location">Location:</label>
   <input type="text" name="location" id="location"><br>
