--- a/views/events/show.erb
+++ b/views/events/show.erb
@@ -1,3 +1,3 @@
 <h2><%= @event.title %></h2>
-<p><%= @event.start_time %> - <%= @event.end_time %></p>
-<p><%= @event.location %></p>
+<p>When: <%= @event.start_date %> <%= @event.start_time %> --- <%= @event.end_date %> <%= @event.end_time %></p>
+<p>Where: <%= @event.location %></p>
