--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,46 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+textarea {
+  width: 100%;
+    max-width: 100%;
+    vertical-align: center;
+    border: none;
+     overflow: auto;
+     outline: none;
+    max-height: 20px;
+
+     -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+     box-shadow: none;
+     text-align: center;
+     font-size: 20px;
+     color: rgba(166, 223, 249, 1)
+}
+
+::-webkit-input-placeholder {
+   color: rgba(166, 223, 249, 0.5)
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: rgba(166, 223, 249, 0.5)
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: rgba(166, 223, 249, 0.5)
+}
+
+:-ms-input-placeholder {  
+   color: rgba(166, 223, 249, 0.5)
+}
+
+.appointment-form {
+  width: 100%;
+  max-width: 100%;
+}
+
+
+
 /* PANELS */
 
 .panel {
@@ -35,16 +75,39 @@ body {
   color: #fff; 
 }
 
+.panel-calendar-days {
+  padding: 0px;
+}
+
+.panel-calendar-days li {
+  position: relative;
+  display: inline-block;
+  margin-right: -4px;
+  width: 14.2857%;
+  text-align: center;
+  font-size: 11px;
+  padding: 12px 0;
+  color: rgba(140, 210, 240, 1); 
+}
+
 .panel-calendar li:hover {
   background-color: rgba( 19, 106, 163, 1 );
   border-radius: 4px;
   cursor: pointer;
 }
 
+.priority-radio input {
+  width: 12%;
+}
+
 /* HELPERS & MODIFIERS */
 
 .__blue-background {
   background-color: rgba( 35, 144, 212, 1 );
+}
+
+.__blue-background-pale {
+  background-color: rgba(118, 194, 238, 1);
 }
 
 .__box-shadow {
