--- a/views/home.erb
+++ b/views/home.erb
@@ -5,7 +5,7 @@
     DATES - APPOINTMENTS - EVENTS
   </div>
 
-  <ul>
+  <ul class="panel-calendar-days">
     <% @calendar.day_order.each do |day_name| %>
       <li><%= day_name %></li>
     <% end %>
@@ -13,13 +13,17 @@
 
   <ul class="panel-calendar">
     <% @calendar.days.each do |day| %>
-      <li>
+      <li <%= "class='__blue-background-pale'" if day.even_month %> >
         <%= day.pretty_string %>
         <% if @calendar.appointments( day ).length > 0 %>
           <span class="__calendar-appt"></span>
         <% end %>
+
       </li>
     <% end %>
   </ul>
 </div>
 
+<div class="panel __blue-background __box-shadow">
+<%= erb :'appointments/new' %>
+</div>
