added some styling

--- a/views/appointments/new.erb
+++ b/views/appointments/new.erb
@@ -1,31 +1,36 @@
-<form action="/appointments" method="post">
-  <label for="name"></label>
-  <textarea name="title" id="title" class="__blue-background" placeholder="APPOINTMENT TITLE"></textarea><br>
+<div class="grid grid-4">
+  <div class="panel __turquoise-background __box-shadow">
 
-  <div class="appointment-form">
-  <label for="start_date">From:</label>
-  <input type="date" name="start_date" id="start_date" value="<%= Date.today %>">
-  <label for="start_time"></label>
-  <input type="time" name="start_time" id="start_time" value="09:00"><br>
+    <form class="form" action="/appointments" method="post">
+      <label for="name"></label>
+      <input type="text" class="form-text" id="title" placeholder="Appointment Title" >
+      <div class="appointment-form">
+      <label for="start_date">From:</label>
+      <input type="date" name="start_date" id="start_date" value="<%= Date.today %>">
+      <label for="start_time"></label>
+      <input type="time" name="start_time" id="start_time" value="09:00"><br>
+      </div>
+
+
+      <label for="end_date">To:</label>
+      <input type="date" name="end_date" id="end_date" value="<%= Date.today %>">
+      <label for="end_time"></label>
+      <input type="time" name="end_time" id="end_time" value="10:00"><br>
+
+
+      <label for="location">Where:</label>
+      <input type="text" name="location" id="location"><br>
+
+      <label for="priority">Priority:</label>
+      <div class="priority-radio">
+      <input type="radio" name="priority" value="1" checked> 1
+      <input type="radio" name="priority" value="2"> 2
+      <input type="radio" name="priority" value="3"> 3
+      <input type="radio" name="priority" value="4"> 4
+      <input type="radio" name="priority" value="5"> 5
+      </div>
+      <input type='submit' value="ADD">
+    </form>
+
   </div>
-
-
-  <label for="end_date">To:</label>
-  <input type="date" name="end_date" id="end_date" value="<%= Date.today %>">
-  <label for="end_time"></label>
-  <input type="time" name="end_time" id="end_time" value="10:00"><br>
-
-
-  <label for="location">Where:</label>
-  <input type="text" name="location" id="location"><br>
-
-  <label for="priority">Priority:</label>
-  <div class="priority-radio">
-  <input type="radio" name="priority" value="1" checked> 1
-  <input type="radio" name="priority" value="2"> 2
-  <input type="radio" name="priority" value="3"> 3
-  <input type="radio" name="priority" value="4"> 4
-  <input type="radio" name="priority" value="5"> 5
-  </div>
-  <input type='submit' value="ADD">
-</form>
+</div>
