--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,23 +4,24 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: rgba( 59, 58, 63, 1 );
 }
 
-textarea {
-  width: 100%;
-    max-width: 100%;
-    vertical-align: center;
-    border: none;
-     overflow: auto;
-     outline: none;
-    max-height: 20px;
+/* FORMS & INPUTS */
 
-     -webkit-box-shadow: none;
-     -moz-box-shadow: none;
-     box-shadow: none;
-     text-align: center;
-     font-size: 20px;
-     color: rgba(166, 223, 249, 1)
+.form {
+
+}
+
+.form-text {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  height: 60px;
+  font-size: 28px;
+  font-weight: 100;
+  width: 100%;
+  color: white;
 }
 
 ::-webkit-input-placeholder {
@@ -44,13 +45,49 @@ textarea {
   max-width: 100%;
 }
 
+/* GRIDS */
 
+.container {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.grid {
+  display: inline-block;
+  margin-right: -4px;
+  box-sizing: border-box;
+  vertical-align: top;
+  padding: 0px 10px; 
+}
+
+.grid-1 {
+  width: 8.333333%;
+}
+
+.grid-2 {
+  width: 16.666666%;
+}
+
+.grid-3 {
+  width: 25%;
+}
+
+.grid-4 {
+  width: 33.333333%;
+}
+
+.grid-5 {
+  width: 41.666666%;
+}
+
+.grid-6 {
+  width: 50%;
+}
 
 /* PANELS */
 
 .panel {
   padding: 20px;
-  width: 30%;
 }
 
 .panel-header {
@@ -110,6 +147,18 @@ textarea {
   background-color: rgba(118, 194, 238, 1);
 }
 
+.__turquoise-background {
+  background-color: rgba(79, 192, 228, 1);
+}
+
+.__l-grey-background {
+  background-color: rgba(240, 240, 240, 1);
+}
+
+.__blue-pale {
+  color: rgba(118, 194, 238, 1) !important;
+}
+
 .__box-shadow {
   -webkit-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
@@ -118,10 +167,11 @@ textarea {
 
 .__calendar-appt {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 5px;
+  right: 5px;
   width: 10px;
   height: 10px;
   background-color: rgba( 224, 85, 55, 1 );
   border-radius: 50%;
+  border: 2px solid rgba( 35, 144, 212, 1 );
 }
